[package]
name = "isupipe-core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test = []

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
fake.workspace = true
num-traits.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1.40"
