[package]
name = "isupipe-core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
test = ["mockall"]

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
kubetsu.workspace = true
fake.workspace = true
mockall = { version = "0.12.1", optional = true }
num-traits.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1.40"
